--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ numpy = "^1.26.4"
 matplotlib = "^3.9.0"
 networkx = "^3.3"
 gymnasium = {extras = ["box2d"], version = "^0.29.1"}
+opencv-python = "^4.10.0.82"
+natsort = "^8.4.0"
+imageio = "^2.34.1"
 
 
 [build-system]
